# GDUTCourseGrabber

./: .gitignore  Dockerfile  README.md  app.py  body.json  pack.bat  pyproject.toml  route.json
.github/workflows/: build.yml  release.yml
scripts/: pack.bat  pack.sh
src/gdut_course_grabber/: __init__.py  __main__.py  constants.py
src/gdut_course_grabber/api/: __init__.py  exc.py
src/gdut_course_grabber/api/config/: __init__.py
src/gdut_course_grabber/api/eas/: __init__.py
src/gdut_course_grabber/api/grabber/: __init__.py
src/gdut_course_grabber/api/storage/: __init__.py
src/gdut_course_grabber/api/utils/: account.py
src/gdut_course_grabber/context/: config.py  grabber.py  path.py
src/gdut_course_grabber/core/grabber/: __init__.py
src/gdut_course_grabber/models/: __init__.py
src/gdut_course_grabber/utils/eas/: __init__.py  _types.py
src/gdut_course_grabber/utils/grabber/: __init__.py
static/: index.html  old.html  scripts.js  styles.css
static/js/: scripts.js
templates/: index.html
